--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,24 @@
 version: '3.7'
 
 services:
-  db:
-    image: mysql:8.0.34-debian
+  postgres:
+    image: postgres:16-alpine
     restart: always
-    command: '--innodb_use_native_aio=0 --character-set-server=utf8 --collation-server=utf8_general_ci'
-    cap_add: [SYS_NICE]
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: webnc
     volumes:
-      - mysql:/var/lib/mysql
-      - mysql:/database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - postgres:/var/lib/postgresql/data
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     ports:
-      - '3306:3306'
+      - '5432:5432'
 
   redis:
-    image: 7.0-alpine3.18
-    restart: always
+    image: redis/redis-stack:latest
+    pull_policy: if_not_present
+    restart: on-failure
+    container_name: redis
     ports:
       - '6379:6379'
     volumes:
@@ -36,5 +38,5 @@ services:
       - .:/usr/src/app
 
 volumes:
-  mysql:
+  postgres:
   redis:
