feat: change `db` from mysql into postgresql

--- a/.env.docker
+++ b/.env.docker
@@ -4,11 +4,11 @@ API_PREFIX="api"
 API_VERSION="v1"
 
 #DATABASE
-DATABASE_URL="mysql://root:root@host.docker.internal:3306/datn"
+DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc"
 
 
 #REDIS
-REDIS_URL="redis://localhost:6379"
+REDIS_URL="redis://host.docker.internal:6379"
 REDIS_TTL=1800000
 
 # JWT
