--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ API_PREFIX="api"
 API_VERSION="v1"
 
 #DATABASE
-DATABASE_URL="mysql://root:password@127.0.0.1:3306/datn"
+DATABASE_URL="postgresql://root:password@127.0.0.1:5432/webnc"
 
 #REDIS
 REDIS_URL="redis://localhost:6379"
