--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/morgan": "^1.9.6",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.10",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
