--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,9 @@ services:
       - '3001:3001'
     volumes:
       - .:/usr/src/app
+    depends_on:
+      - redis
+      - postgres
 
 volumes:
   postgres:
