fix: test fix `docker compose` multi platform

--- a/.env.docker
+++ b/.env.docker
@@ -4,7 +4,7 @@ API_PREFIX="api"
 API_VERSION="v1"
 
 #DATABASE
-DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc"
+DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc?schema=public"
 
 
 #REDIS
