--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
@@ -39,6 +40,7 @@
     "compression": "^1.7.4",
     "express-rate-limit": "^7.0.0",
     "gts": "^3.1.1",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
