feat: implement verify email when register

--- a/.env.dev
+++ b/.env.dev
@@ -2,6 +2,7 @@
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
+APP_URL='http://localhost:3001's
 
 #DATABASE
 DATABASE_URL="postgresql://root:password@127.0.0.1:5432/webnc?schema=public"
@@ -15,3 +16,10 @@ JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_TOKEN_TTL=1800
 JWT_ACCESS_TOKEN_TTL=2592000
+
+#MAILER
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=quanghuynhwtf3@gmail.com
+MAIL_PASSWORD=sowgphzlavwnxguzs
