--- a/.env.docker
+++ b/.env.docker
@@ -2,6 +2,7 @@
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
+APP_URL='http://localhost:3001'
 
 #DATABASE
 DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc?schema=public"
@@ -16,3 +17,12 @@ JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_TOKEN_TTL=1800
 JWT_ACCESS_TOKEN_TTL=2592000
+JWT_MAIL_SECRET=mailsecret
+JWT_MAIL_TOKEN_TTL=259200
+
+#MAILER
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=quanghuynhwtf3@gmail.com
+MAIL_PASSWORD=pitdqprcbuuupxqt
