chor: update env.example

--- a/env.example
+++ b/env.example
@@ -2,14 +2,26 @@
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
+APP_URL='http://localhost:3001'
 
 #DATABASE
-DATABASE_URL="mysql://root:password@127.0.0.1:3306/datn"
+DATABASE_URL="postgresql://root:password@localhost:5432/webnc?schema=public"
 
 #REDIS
 REDIS_URL="redis://localhost:6379"
 REDIS_TTL=1800000
 
 # JWT
-JWT_SECRET=YOUR_SECRET_KEY_HERE
+JWT_ACCESS_SECRET=accesstokenhere
+JWT_REFRESH_SECRET=refreshtokenhere
+JWT_REFRESH_TOKEN_TTL=1800
 JWT_ACCESS_TOKEN_TTL=2592000
+JWT_MAIL_SECRET=mailsecret
+JWT_MAIL_TOKEN_TTL=259200
+
+#MAILER
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=quanghuynhwtf3@gmail.com
+MAIL_PASSWORD=pitdqprcbuuupxqt
