--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Remove lock file
+        uses: rm -rf yarn.lock
+
       - name: Install Yarn
         run: npm install -g yarn
 
