chor: update db uri

--- a/.env.docker
+++ b/.env.docker
@@ -5,11 +5,11 @@ API_VERSION="v1"
 APP_URL='http://localhost:3001'
 
 #DATABASE
-DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc?schema=public"
+DATABASE_URL="postgres://postgres:*3c4ea3Eb6AA35C413DG3DE-bCaeEG6*@roundhouse.proxy.rlwy.net:36184/railway"
 
 
 #REDIS
-REDIS_URL="redis://host.docker.internal:6379"
+REDIS_URL="redis://default:6GDp2fIgaGaL1JOGAigpPFFb25KDBcj2@viaduct.proxy.rlwy.net:22074"
 REDIS_TTL=1800000
 
 # JWT
