wip: implement resend confirm email api

--- a/env.example
+++ b/env.example
@@ -18,6 +18,8 @@ JWT_REFRESH_TOKEN_TTL=1800
 JWT_ACCESS_TOKEN_TTL=2592000
 JWT_MAIL_SECRET=mailsecret
 JWT_MAIL_TOKEN_TTL=259200
+JWT_FORGOT_PASSWORD_SECRET=forgotpasswordsecret
+JWT_FORGOT_PASSWORD_TOKEN_TTL=25920
 
 #MAILER
 MAIL_MAILER=smtp
