--- a/.env.dev
+++ b/.env.dev
@@ -16,6 +16,10 @@ JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_TOKEN_TTL=1800
 JWT_ACCESS_TOKEN_TTL=2592000
+JWT_MAIL_SECRET=mailsecret
+JWT_MAIL_TOKEN_TTL=259200
+JWT_FORGOT_PASSWORD_SECRET=forgotpasswordsecret
+JWT_FORGOT_PASSWORD_TOKEN_TTL=25920
 
 #MAILER
 MAIL_MAILER=smtp
