fix: fix absolute path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       "@src/*": [
         "src/*"
       ],
+    },
+    "compilerOptions": {
+      "baseUrl": "./",
+      "@src/*": [
+        "src/*"
+      ],
     }
   }
 }
