feat: implement reset password feature

--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@ PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
+FRONTEND_URL='example'
 
 #DATABASE
 DATABASE_URL="postgresql://root:password@localhost:5432/webnc?schema=public"
