feat: implement reset password feature

--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,8 @@
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
-APP_URL='http://localhost:3001's
+APP_URL='http://localhost:3001'
+FRONTEND_URL='https://webnc-fe.vercel.app'
 
 #DATABASE
 DATABASE_URL="postgresql://root:password@127.0.0.1:5432/webnc?schema=public"
