--- a/.env.docker
+++ b/.env.docker
@@ -3,6 +3,7 @@ PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
+FRONTEND_URL='https://webnc-fe.vercel.app'
 
 #DATABASE
 DATABASE_URL="postgres://postgres:*3c4ea3Eb6AA35C413DG3DE-bCaeEG6*@roundhouse.proxy.rlwy.net:36184/railway"
