improve: improve code

--- a/.env.dev
+++ b/.env.dev
@@ -10,12 +10,12 @@ DATABASE_URL="postgresql://root:password@127.0.0.1:5432/webnc?schema=public"
 
 #REDIS
 REDIS_URL="redis://localhost:6379"
-REDIS_TTL=1800000
+REDIS_TTL=180000
 
 # JWT
 JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
-JWT_REFRESH_TOKEN_TTL=1800
+JWT_REFRESH_TOKEN_TTL=180000
 JWT_ACCESS_TOKEN_TTL=2592000
 JWT_MAIL_SECRET=mailsecret
 JWT_MAIL_TOKEN_TTL=259200
