--- a/.env.docker
+++ b/.env.docker
@@ -11,12 +11,12 @@ DATABASE_URL="postgres://postgres:*3c4ea3Eb6AA35C413DG3DE-bCaeEG6*@roundhouse.pr
 
 #REDIS
 REDIS_URL="redis://default:6GDp2fIgaGaL1JOGAigpPFFb25KDBcj2@viaduct.proxy.rlwy.net:22074"
-REDIS_TTL=1800000
+REDIS_TTL=180000
 
 # JWT
 JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
-JWT_REFRESH_TOKEN_TTL=1800
+JWT_REFRESH_TOKEN_TTL=180000
 JWT_ACCESS_TOKEN_TTL=2592000
 JWT_MAIL_SECRET=mailsecret
 JWT_MAIL_TOKEN_TTL=259200
