--- a/env.example
+++ b/env.example
@@ -10,12 +10,12 @@ DATABASE_URL="postgresql://root:password@localhost:5432/webnc?schema=public"
 
 #REDIS
 REDIS_URL="redis://localhost:6379"
-REDIS_TTL=1800000
+REDIS_TTL=180000
 
 # JWT
 JWT_ACCESS_SECRET=accesstokenhere
 JWT_REFRESH_SECRET=refreshtokenhere
-JWT_REFRESH_TOKEN_TTL=1800
+JWT_REFRESH_TOKEN_TTL=180000
 JWT_ACCESS_TOKEN_TTL=2592000
 JWT_MAIL_SECRET=mailsecret
 JWT_MAIL_TOKEN_TTL=259200
