--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "joi": "17.1.1",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
@@ -34,6 +33,7 @@
     "@nestjs/swagger": "^7.1.15",
     "@prisma/client": "^5.6.0",
     "@swc/core": "^1.3.93",
+    "aws-sdk": "^2.1498.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -43,6 +43,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
+    "joi": "17.1.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nestjs-redis": "^1.3.3",
@@ -70,6 +71,7 @@
     "@types/jest": "29.5.8",
     "@types/lodash": "^4.14.199",
     "@types/morgan": "^1.9.6",
+    "@types/multer": "^1.4.10",
     "@types/node": "20.9.0",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.38",
