fix: docker env

--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
-FRONTEND_URL='https://webnc-fe.vercel.app'
+FRONTEND_URL='http://localhost:3000'
 
 #DATABASE
 DATABASE_URL="postgresql://root:password@127.0.0.1:5432/webnc?schema=public"
@@ -28,3 +28,10 @@ MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=quanghuynhwtf3@gmail.com
 MAIL_PASSWORD=sowgphzlavwnxguzs
+
+#AWSS3
+AWS_ACCESS_KEY_ID=AKIA2JYNVTTS4QOMANXI
+AWS_SECRET_ACCESS_KEY=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
+AWS_PUBLIC_BUCKET_KEY=webnc
+AWS_CLOUDFRONT_URL=https://d25ezbt2biq5zr.cloudfront.net/
+AWS_REGION=ap-southeast-1
