fix: docker env again

--- a/.env.docker
+++ b/.env.docker
@@ -2,22 +2,21 @@
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
-APP_URL='http://localhost:3001'
-FRONTEND_URL='http://localhost:3000'
+APP_URL='https://webnc-be-production.up.railway.app'
+FRONTEND_URL='https://webnc-fe.vercel.app'
 
 #DATABASE
 DATABASE_URL="postgres://postgres:*3c4ea3Eb6AA35C413DG3DE-bCaeEG6*@roundhouse.proxy.rlwy.net:36184/railway"
 
-
 #REDIS
 REDIS_URL="redis://default:6GDp2fIgaGaL1JOGAigpPFFb25KDBcj2@viaduct.proxy.rlwy.net:22074"
-REDIS_TTL=180000
+REDIS_TTL=259200
 
 # JWT
-JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
-JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
-JWT_REFRESH_TOKEN_TTL=180000
-JWT_ACCESS_TOKEN_TTL=2592000
+JWT_ACCESS_SECRET=accesstokenhere
+JWT_REFRESH_SECRET=refreshtokenhere
+JWT_REFRESH_TOKEN_TTL=2592000
+JWT_ACCESS_TOKEN_TTL=259200
 JWT_MAIL_SECRET=mailsecret
 JWT_MAIL_TOKEN_TTL=259200
 JWT_FORGOT_PASSWORD_SECRET=forgotpasswordsecret
