fix: fix docker compose for submit exersice

--- a/.env.dev
+++ b/.env.dev
@@ -6,7 +6,7 @@ APP_URL='http://localhost:3001'
 FRONTEND_URL='http://localhost:3000'
 
 #DATABASE
-DATABASE_URL="postgresql://root:password@127.0.0.1:5432/webnc?schema=public"
+DATABASE_URL="postgresql://root:password@localhost:5432/webnc"
 
 #REDIS
 REDIS_URL="redis://localhost:6379"
