--- a/.env.docker
+++ b/.env.docker
@@ -2,14 +2,15 @@
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
-APP_URL='https://webnc-be-production.up.railway.app'
+APP_URL='http://localhost:3001'
 FRONTEND_URL='https://webnc-fe.vercel.app'
+# FRONTEND_URL='http://localhost:3000'
 
 #DATABASE
-DATABASE_URL="postgres://postgres:*3c4ea3Eb6AA35C413DG3DE-bCaeEG6*@roundhouse.proxy.rlwy.net:36184/railway"
+DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc"
 
 #REDIS
-REDIS_URL="redis://default:6GDp2fIgaGaL1JOGAigpPFFb25KDBcj2@viaduct.proxy.rlwy.net:22074"
+REDIS_URL="redis://host.docker.internal:6379"
 REDIS_TTL=259200
 
 # JWT
