--- a/env.example
+++ b/env.example
@@ -3,18 +3,18 @@ PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
-FRONTEND_URL='example'
+FRONTEND_URL='http://localhost:3000'
 
 #DATABASE
-DATABASE_URL="postgresql://root:password@localhost:5432/webnc?schema=public"
+DATABASE_URL="postgresql://root:password@localhost:5432/webnc"
 
 #REDIS
 REDIS_URL="redis://localhost:6379"
 REDIS_TTL=180000
 
 # JWT
-JWT_ACCESS_SECRET=accesstokenhere
-JWT_REFRESH_SECRET=refreshtokenhere
+JWT_ACCESS_SECRET=YOUR_SECRET_KEY_HERE
+JWT_REFRESH_SECRET=YOUR_SECRET_KEY_HERE
 JWT_REFRESH_TOKEN_TTL=180000
 JWT_ACCESS_TOKEN_TTL=2592000
 JWT_MAIL_SECRET=mailsecret
@@ -25,6 +25,13 @@ JWT_FORGOT_PASSWORD_TOKEN_TTL=25920
 #MAILER
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USERNAME=quanghuynhwtf3@gmail.com
-MAIL_PASSWORD=pitdqprcbuuupxqt
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+
+#AWSS3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_PUBLIC_BUCKET_KEY=
+AWS_CLOUDFRONT_URL=
+AWS_REGION=
