--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:prod": "node dist/main",
     "prepare": "test -d node_modules/husky && husky install || echo \"husky is not installed\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "dev:migrate": "yarn prisma migrate reset -f",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
