--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      # - name: Lint code
-      #   run: yarn lint
-
       - name: Run build
         run: yarn build
+
+      - name: Run test
+        run: yarn test
