--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Run build
         run: yarn build
 
-      - name: Run test
-        run: yarn test
+      # - name: Run test
+      #   run: yarn test
