wip (#43): add facebook authenticate

--- a/.env.dev
+++ b/.env.dev
@@ -35,3 +35,7 @@ AWS_SECRET_ACCESS_KEY=Cw4YbVeIleHKQiXB3qTmGof4Typ+rf4O7Fbyh/Wy
 AWS_PUBLIC_BUCKET_KEY=webnc
 AWS_CLOUDFRONT_URL=https://d25ezbt2biq5zr.cloudfront.net/
 AWS_REGION=ap-southeast-1
+
+#Facebook
+APP_ID=276125968287482
+APP_SECRET=4f20537c4095aff9d9685b9550291236
