--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nestjs-redis": "^1.3.3",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prisma": "5",
@@ -76,6 +77,7 @@
     "@types/multer": "^1.4.10",
     "@types/node": "20.9.4",
     "@types/passport-facebook": "^3.0.3",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.11",
