--- a/.env.docker
+++ b/.env.docker
@@ -23,6 +23,16 @@ JWT_MAIL_TOKEN_TTL=259200
 JWT_FORGOT_PASSWORD_SECRET=forgotpasswordsecret
 JWT_FORGOT_PASSWORD_TOKEN_TTL=25920
 
+#GOOGLE
+GOOGLE_CLIENT_ID=635495464629-smovkij5trmlcsubhsdfrcjtccuo7hc0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3001/api/v1/auth/google/redirect
+
+#FACEBOOK
+FACEBOOK_CLIENT_ID=276125968287482
+FACEBOOK_CLIENT_SECRET=4f20537c4095aff9d9685b9550291236
+FACEBOOK_CALLBACK_URL=http://localhost:3001/api/v1/auth/facebook/redirect
+
 #MAILER
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
