--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.2.10",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/swagger": "7.1.16",
+    "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "5.6.0",
     "@swc/core": "1.3.100",
     "aws-sdk": "2.1504.0",
