--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
+    "postbuild": "cp firebase-admin-sdk.json dist/firebase-admin-sdk.json",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -28,6 +29,7 @@
     "@nestjs/common": "10.2.10",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.10",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.2.10",
@@ -42,6 +44,7 @@
     "class-validator": "0.14.0",
     "compression": "1.7.4",
     "express-rate-limit": "7.1.5",
+    "firebase-admin": "^11.11.1",
     "gts": "5.2.0",
     "handlebars": "4.7.8",
     "helmet": "7.1.0",
