--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:proxy": " nest start --watch &&caddy reverse-proxy --from waang.localhost --to 127.0.0.1:3001",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "prepare": "test -d node_modules/husky && husky install || echo \"husky is not installed\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "dev:migrate": "yarn prisma migrate reset -f",
+    "caddy": "caddy reverse-proxy --from waang.localhost --to 127.0.0.1:3001",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
