--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:proxy": " nest start --watch &&caddy reverse-proxy --from waang.localhost --to 127.0.0.1:3001",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "prepare": "test -d node_modules/husky && husky install || echo \"husky is not installed\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "dev:migrate": "yarn prisma migrate reset -f",
+    "caddy": "caddy reverse-proxy --from waang.localhost --to 127.0.0.1:3001",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -28,10 +30,13 @@
     "@nestjs/common": "10.2.10",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.10",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.2",
     "@nestjs/platform-express": "10.2.10",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/swagger": "7.1.16",
+    "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "5.6.0",
     "@swc/core": "1.3.100",
     "aws-sdk": "2.1504.0",
@@ -40,6 +45,7 @@
     "class-validator": "0.14.0",
     "compression": "1.7.4",
     "express-rate-limit": "7.1.5",
+    "firebase-admin": "^11.11.1",
     "gts": "5.2.0",
     "handlebars": "4.7.8",
     "helmet": "7.1.0",
