--- a/env.example
+++ b/env.example
@@ -46,3 +46,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_KEY=
 AWS_CLOUDFRONT_URL=
 AWS_REGION=
+
+
+#FIREBASE
+PROJECT_ID=
+CLIENT_EMAIL=
+PRIVATE_KEY=
