--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "compression": "1.7.4",
+    "dayjs": "^1.11.10",
     "express-rate-limit": "7.1.5",
     "firebase-admin": "^11.11.1",
     "gts": "5.2.0",
