--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/swagger": "7.1.16",
     "@nestjs/websockets": "^10.2.10",
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "^5.7.0",
     "@swc/core": "1.3.100",
     "aws-sdk": "2.1510.0",
     "bcryptjs": "2.4.3",
@@ -60,7 +60,7 @@
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
-    "prisma": "5.6.0",
+    "prisma": "^5.7.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "swagger-ui-express": "5.0.0",
