fix (#74): migrate aws sdk to v3

--- a/env.example
+++ b/env.example
@@ -40,15 +40,11 @@ MAIL_PORT=587
 MAIL_USERNAME=
 MAIL_PASSWORD=
 
-#AWSS3
+#AWS_S3
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_KEY=
 AWS_CLOUDFRONT_URL=
 AWS_REGION=
-
-
-#FIREBASE
-PROJECT_ID=
-CLIENT_EMAIL=
-PRIVATE_KEY=
+AWS_RATE_TTL=3600
+AWS_RATE_LIMIT=500
