--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.470.0",
+    "@aws-sdk/credential-providers": "^3.470.0",
+    "@aws-sdk/lib-storage": "^3.470.0",
     "@nestjs-modules/mailer": "1.9.1",
     "@nestjs/common": "10.2.10",
     "@nestjs/config": "3.1.1",
@@ -40,7 +43,6 @@
     "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "^5.7.0",
     "@swc/core": "1.3.100",
-    "aws-sdk": "2.1510.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -73,6 +75,7 @@
     "@nestjs/cli": "10.2.1",
     "@nestjs/schematics": "10.0.3",
     "@nestjs/testing": "10.2.10",
+    "@nestjs/throttler": "^5.1.0",
     "@swc/cli": "0.1.63",
     "@swc/jest": "0.2.29",
     "@types/bcryptjs": "2.4.6",
