--- a/.env.docker
+++ b/.env.docker
@@ -1,9 +1,11 @@
 #APP
+NODE_ENV=development
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
 FRONTEND_URL='https://webnc-fe.vercel.app'
+DOCUMENT_ENABLED=true
 # FRONTEND_URL='http://localhost:3000'
 
 #DATABASE
