--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,20 +6,16 @@ on:
     branches: ['main']
 
 jobs:
-  test:
+  ci:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
       - name: Copy repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version-file: .node-version
 
       - name: Cache Yarn dependencies
         uses: actions/cache@v2
@@ -35,6 +31,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Run lint
+        run: yarn lint
 
       - name: Run build
         run: yarn build
