ci (#74): fix ci

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,8 +46,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: lastest
+          tags: waang0702/${{ env.IMAGE_NAME }}:lastest
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
