--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,56 @@
-name: ci
+name: Build and push to docker hub
+
 on:
-  pull_request:
-    branches: ['main']
   push:
+    branches: ['main']
+  pull_request:
     branches: ['main']
 
 jobs:
-  ci:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Copy repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: .node-version
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Cache Yarn dependencies
+      - name: Cache Docker layers
         uses: actions/cache@v2
         with:
-          path: |
-            node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/*.lock') }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-buildx-
 
-      - name: Install Yarn
-        run: npm install -g yarn
+      - name: Log into registry Docker hub
+        # if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: waang0702/web-nc
 
-      - name: Run lint
-        run: yarn lint
+      - name: Build and push Docker image
+        id: build-and-push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: waang0702/webnc:lastest
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-      - name: Run build
-        run: yarn build
-
-      # - name: Run test
-      #   run: yarn test
+      - name: Remove cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
