--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: ['main']
 
+env:
+  IMAGE_NAME: ${{ vars.IMAGE_NAME }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,7 +39,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: waang07/webnc
+          images: ${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
         id: build-and-push
@@ -45,7 +48,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: waang07/webnc:lastest
+          tags: ${{ env.IMAGE_NAME }}:lastest
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
