ci (#73): add call deploy hook

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,13 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
 
+      - name: Deloy to render with hook
+        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl "$deploy_url"
+
       - name: Remove cache
         run: |
           rm -rf /tmp/.buildx-cache
