--- a/deployments/docker-compose/docker-compose.yaml
+++ b/deployments/docker-compose/docker-compose.yaml
@@ -10,7 +10,6 @@ services:
       POSTGRES_DB: webnc
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     ports:
       - '5432:5432'
     networks:
@@ -28,7 +27,7 @@ services:
     networks:
       - elearning
 
-  api:
+  nestjs:
     build:
       context: ../../
       dockerfile: Dockerfile
