--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,9 @@
 name: Lint and test
 on:
   pull_request:
-    branches: ['main']
+    branches: ['main', 'develop']
   push:
-    branches: ['main']
+    branches: ['main', 'develop']
 
 jobs:
   ci:
