--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:proxy": " nest start --watch &&caddy reverse-proxy --from waang.localhost --to 127.0.0.1:3001",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -19,7 +19,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "dev:migrate": "yarn prisma migrate reset -f",
     "caddy": "caddy reverse-proxy --from waang.localhost --to 127.0.0.1:3001",
-    "visualize": "atlas schema inspect -u 'postgres://webnc_user:UTQKPBUNc1molDUXwbARQplS7XykjFzT@dpg-cli98rfjc5ks73er70f0-a.oregon-postgres.render.com/webnc' -w",
+    "visualize": "atlas schema inspect -u 'postgres://postgres:*3c4ea3Eb6AA35C413DG3DE-bCaeEG6*@roundhouse.proxy.rlwy.net:36184/railway' -w",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -27,6 +27,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.470.0",
+    "@aws-sdk/credential-providers": "^3.470.0",
+    "@aws-sdk/lib-storage": "^3.470.0",
     "@nestjs-modules/mailer": "1.9.1",
     "@nestjs/common": "10.2.10",
     "@nestjs/config": "3.1.1",
@@ -40,7 +43,6 @@
     "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "^5.7.0",
     "@swc/core": "1.3.100",
-    "aws-sdk": "2.1510.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -73,6 +75,7 @@
     "@nestjs/cli": "10.2.1",
     "@nestjs/schematics": "10.0.3",
     "@nestjs/testing": "10.2.10",
+    "@nestjs/throttler": "^5.1.0",
     "@swc/cli": "0.1.63",
     "@swc/jest": "0.2.29",
     "@types/bcryptjs": "2.4.6",
