--- a/env.example
+++ b/env.example
@@ -1,9 +1,11 @@
 #APP
+NODE_ENV=development
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
 FRONTEND_URL='http://localhost:3000'
+DOCUMENT_ENABLED=true
 
 #DATABASE
 DATABASE_URL="postgresql://root:password@localhost:5432/webnc"
@@ -40,15 +42,11 @@ MAIL_PORT=587
 MAIL_USERNAME=
 MAIL_PASSWORD=
 
-#AWSS3
+#AWS_S3
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_KEY=
 AWS_CLOUDFRONT_URL=
 AWS_REGION=
-
-
-#FIREBASE
-PROJECT_ID=
-CLIENT_EMAIL=
-PRIVATE_KEY=
+AWS_RATE_TTL=3600
+AWS_RATE_LIMIT=500
