Implement add health check for dockerfile feature (#80)
* feat (#74): improve database and resolve some todo

* chore (#74): fix something

* refactor (#74): add course teacher table

* fix (#74): migrate aws sdk to v3

* chore (#74): change language invite mail to english

* refactor (#74): migrate from fcm to `socket.io` for notification push

* chore (#74): remove unuse code

* fix (#74): migrate prisma v4 to v5

* improve (#74): add some env

* chore (#74): fix switch env with command

* chore (#74): stopped tracking `.env.dev` file

* chore (#74): change minor code

* chore (#74): add frozen lockfile when install dependence

* ci (#74): test build and push to docker hub ci

* ci (#74): remove old version

* ci (#74): test ci

* ci (#74): remove unnecessary step

* ci (#74): test ci

* ci (#74): fix ci

* ci (#74): rename ci config file

* ci (#74): fix ci

* ci (#74): add image name to env

* ci (#74): final config ci version

* feat (#74): update prisma schema

* feat (#73): add health-check for server

* chore (#73): change issue template

* ci (#73): add call deploy hook

* feat (#73): add metrics from nest js [skip ci]

* ci (#73): add trigger for develop branch

--- a/deployments/docker-compose/docker-compose.yaml
+++ b/deployments/docker-compose/docker-compose.yaml
@@ -10,7 +10,6 @@ services:
       POSTGRES_DB: webnc
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     ports:
       - '5432:5432'
     networks:
@@ -28,7 +27,7 @@ services:
     networks:
       - elearning
 
-  api:
+  nestjs:
     build:
       context: ../../
       dockerfile: Dockerfile
@@ -45,6 +44,11 @@ services:
       - postgres
     networks:
       - elearning
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:3001/api/v1/health']
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   prometheus:
     image: prom/prometheus
