--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@nestjs/platform-express": "10.2.10",
     "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/swagger": "7.1.16",
+    "@nestjs/terminus": "^10.2.0",
     "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "^5.7.0",
     "@swc/core": "1.3.100",
+    "@willsoto/nestjs-prometheus": "^6.0.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -64,6 +66,7 @@
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "prisma": "^5.7.0",
+    "prom-client": "^15.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "swagger-ui-express": "5.0.0",
