--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,7 +11,7 @@
     "lockFileMaintenance": {
         "enabled": true
     },
-    "baseBranches": ["main"],
+    "baseBranches": ["develop"],
     "separateMajorMinor": false,
     "rangeStrategy": "pin",
     "prHourlyLimit": 100,
