--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "@aws-sdk/client-s3": "^3.470.0",
     "@aws-sdk/credential-providers": "^3.470.0",
     "@aws-sdk/lib-storage": "^3.470.0",
-    "@nestjs-modules/mailer": "1.9.1",
-    "@nestjs/common": "10.2.10",
+    "@nestjs-modules/mailer": "1.10.3",
+    "@nestjs/common": "10.3.0",
     "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.10",
+    "@nestjs/core": "10.3.0",
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.3",
-    "@nestjs/platform-express": "10.2.10",
-    "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/platform-express": "10.3.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/swagger": "7.1.17",
     "@nestjs/terminus": "^10.2.0",
-    "@nestjs/websockets": "^10.2.10",
+    "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.7.0",
     "@swc/core": "1.3.101",
     "@willsoto/nestjs-prometheus": "^6.0.0",
@@ -51,7 +51,6 @@
     "compression": "1.7.4",
     "dayjs": "^1.11.10",
     "express-rate-limit": "7.1.5",
-    "firebase-admin": "^11.11.1",
     "gts": "5.2.0",
     "handlebars": "4.7.8",
     "helmet": "7.1.0",
@@ -67,7 +66,7 @@
     "passport-local": "1.0.0",
     "prisma": "^5.7.0",
     "prom-client": "^15.0.0",
-    "reflect-metadata": "0.1.13",
+    "reflect-metadata": "0.2.1",
     "rxjs": "7.8.1",
     "swagger-ui-express": "5.0.0",
     "uuid": "9.0.1"
@@ -77,7 +76,7 @@
     "@commitlint/config-conventional": "18.4.3",
     "@nestjs/cli": "10.2.1",
     "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.2.10",
+    "@nestjs/testing": "10.3.0",
     "@nestjs/throttler": "^5.1.0",
     "@swc/cli": "0.1.63",
     "@swc/jest": "0.2.29",
@@ -96,8 +95,8 @@
     "@types/passport-local": "1.0.38",
     "@types/supertest": "2.0.16",
     "@types/uuid": "9.0.7",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.0",
@@ -109,7 +108,7 @@
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-loader": "9.5.1",
-    "ts-node": "10.9.1",
+    "ts-node": "10.9.",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.3.3"
   },
