--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
   },
   "postinstall": "husky install",
   "resolutions": {
+    "strip-ansi": "6.0.1",
     "wrap-ansi": "7.0.0",
     "string-width": "4.1.0"
   }
