feat: get user list for admin

--- a/env.example
+++ b/env.example
@@ -5,6 +5,7 @@ API_PREFIX="api"
 API_VERSION="v1"
 APP_URL='http://localhost:3001'
 FRONTEND_URL='http://localhost:3000'
+ADMIN_FRONTEND_URL='http://localhost:3030/admin'
 DOCUMENT_ENABLED=true
 
 #DATABASE
