--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,6 @@ updates:
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 0 # Disable dependabot, renovate is used instead
-    target-branch: "main"
+    target-branch: "develop"
     reviewers:
       - "orgball2608"
