ci: add sonar cloud scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,13 @@
-# Sonar metadata
-sonar.projectKey=my-project
-sonar.projectName=my-project
-sonar.projectVersion=1.0.0
-sonar.projectVersion=1.0.0
+sonar.projectKey=orgball2608_webnc-be
+sonar.organization=orgball2608
 
-# SonarQube server URL
-sonar.host.url=http://172.23.0.1:9000
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=webnc-be
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
