--- a/env.example
+++ b/env.example
@@ -27,13 +27,13 @@ JWT_FORGOT_PASSWORD_TOKEN_TTL=25920
 
 
 #GOOGLE
-GOOGLE_CLIENT_ID=635495464629-smovkij5trmlcsubhsdfrcjtccuo7hc0.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=http://localhost:3001/api/v1/auth/google/redirect
 
 #FACEBOOK
-FACEBOOK_CLIENT_ID=276125968287482
-FACEBOOK_CLIENT_SECRET=4f20537c4095aff9d9685b9550291236
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
 FACEBOOK_CALLBACK_URL=http://localhost:3001/api/v1/auth/facebook/redirect
 
 #MAILER
