--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -2,15 +2,20 @@
 # See all available variables at https://oxsecurity.github.io/megalinter/configuration/ and in linters documentation
 
 APPLY_FIXES: all
+DISABLE:
+  - SPELL
 DISABLE_LINTERS:
   - SPELL_PROSELINT
   - REPOSITORY_GITLEAKS
+  - REPOSITORY_CHECKOV
+  - REPOSITORY_TRIVY
 SHOW_ELAPSED_TIME: true
-FILEIO_REPORTER: false
+FILEIO_REPORTER: true
 JAVASCRIPT_DEFAULT_STYLE: prettier
 JAVASCRIPT_ES_FILTER_REGEX_EXCLUDE: .eslintrc.js
 TYPESCRIPT_DEFAULT_STYLE: prettier
 TYPESCRIPT_ES_FILTER_REGEX_EXCLUDE: .eslintrc.js
+ENV_DOTENV_LINTER_FILE_EXTENSIONS: ['.env.example']
 BASH_EXEC_FILTER_REGEX_INCLUDE: .husky
 BASH_EXEC_FILE_EXTENSIONS: ['']
 BASH_SHELLCHECK_ARGUMENTS: -e SC1091
