--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "joi": "17.11.0",
     "lodash": "4.17.21",
     "morgan": "1.10.0",
+    "nestjs-i18n": "^10.4.0",
     "nestjs-redis": "1.3.3",
     "passport": "0.7.0",
     "passport-facebook": "3.0.0",
