fix (#128): fix docker-compose local

--- a/.env.docker
+++ b/.env.docker
@@ -9,7 +9,10 @@ DOCUMENT_ENABLED=true
 # FRONTEND_URL='http://localhost:3000'
 
 #DATABASE
-DATABASE_URL="postgresql://root:password@host.docker.internal:5432/webnc"
+DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5423/webnc"
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=webnc
 
 #REDIS
 REDIS_URL="redis://host.docker.internal:6379"
