--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/credential-providers": "^3.470.0",
     "@aws-sdk/lib-storage": "^3.470.0",
     "@nestjs-modules/mailer": "1.10.3",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "10.3.0",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.3.0",
@@ -45,6 +46,7 @@
     "@swc/core": "1.3.101",
     "@willsoto/nestjs-prometheus": "^6.0.0",
     "bcryptjs": "2.4.3",
+    "bullmq": "^5.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "compression": "1.7.4",
