feat (#117): add bullmq module and improve code

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,21 @@ FRONTEND_URL='http://localhost:3000'
 DOCUMENT_ENABLED=true
 
 #DATABASE
-DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5423/webnc"
+DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5432/webnc"
+DB_HOST=host.docker.internal
+DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=webnc
 
 #REDIS
 REDIS_URL="redis://host.docker.internal:6379"
+REDIS_HOST=viaduct.proxy.rlwy.net
+REDIS_PORT=22074
+REDIS_PASSWORD=6GDp2fIgaGaL1JOGAigpPFFb25KDBcj2
+REDIS_DB_CACHE=0
+REDIS_DB_BULL_QUEUE=1
+REDIS_DB_THROTTLER=2
 REDIS_TTL=259200
 
 # JWT
@@ -36,12 +44,12 @@ FACEBOOK_CLIENT_SECRET=
 FACEBOOK_CALLBACK_URL=http://localhost:3001/api/v1/auth/facebook/redirect
 
 #MAILER
-JWT_MAIL_SECRET=mailsecret
-JWT_MAIL_TOKEN_TTL=259200
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=
 MAIL_PASSWORD=
+JWT_MAIL_SECRET=mailsecret
+JWT_MAIL_TOKEN_TTL=259200
 
 #AWSS3
 AWS_ACCESS_KEY_ID=
