--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,12 @@ NODE_ENV=development
 PORT=3001
 API_PREFIX="api"
 API_VERSION="v1"
+DOCUMENT_ENABLED=true
+FALLBACK_LANGUAGE=en
 APP_URL='http://localhost:3001'
 FRONTEND_URL='http://localhost:3000'
-DOCUMENT_ENABLED=true
+ADMIN_FRONTEND_URL='http://localhost:3030'
+
 
 #DATABASE
 DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5432/webnc"
