chore (#117): test bullmq send email

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,6 @@ APP_URL='http://localhost:3001'
 FRONTEND_URL='http://localhost:3000'
 ADMIN_FRONTEND_URL='http://localhost:3030'
 
-
 #DATABASE
 DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5432/webnc"
 DB_HOST=host.docker.internal
@@ -20,9 +19,9 @@ DB_DATABASE=webnc
 
 #REDIS
 REDIS_URL="redis://host.docker.internal:6379"
-REDIS_HOST=viaduct.proxy.rlwy.net
-REDIS_PORT=22074
-REDIS_PASSWORD=6GDp2fIgaGaL1JOGAigpPFFb25KDBcj2
+REDIS_HOST=host.docker.internal
+REDIS_PORT=6379
+REDIS_PASSWORD=
 REDIS_DB_CACHE=0
 REDIS_DB_BULL_QUEUE=1
 REDIS_DB_THROTTLER=2
