--- a/.env.example
+++ b/.env.example
@@ -11,16 +11,16 @@ ADMIN_FRONTEND_URL='http://localhost:3030'
 
 #DATABASE
 DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5432/webnc"
-DB_HOST=host.docker.internal
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=webnc
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
 
 #REDIS
 REDIS_URL="redis://host.docker.internal:6379"
-REDIS_HOST=host.docker.internal
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PORT=
 REDIS_PASSWORD=
 REDIS_DB_CACHE=0
 REDIS_DB_BULL_QUEUE=1
