--- a/deployments/docker-compose/docker-compose.local.yaml
+++ b/deployments/docker-compose/docker-compose.local.yaml
@@ -13,17 +13,16 @@ services:
       - '5423:5432'
     volumes:
       - postgres:/data/postgres
-      - ../../init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
+      - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
     env_file:
       - ../../.env.docker
 
   redis:
     container_name: redis
     image: redis/redis-stack:latest
-    pull_policy: if_not_present
     restart: on-failure
     ports:
-      - 6379:6379
+      - "6379:6379"
     volumes:
       - redis:/data
 
@@ -32,12 +31,12 @@ services:
     build:
       context: ../../
       dockerfile: Dockerfile
-      target: development
+      target: build
     command: yarn run start:dev
     env_file:
       - ../../.env.docker
     ports:
-      - 3001:3001
+      - "3001:3001"
     volumes:
       - .:/usr/src/app
     depends_on:
