--- a/deployments/docker-compose/docker-compose.local.yaml
+++ b/deployments/docker-compose/docker-compose.local.yaml
@@ -22,7 +22,7 @@ services:
     image: redis/redis-stack:latest
     restart: on-failure
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis:/data
 
@@ -31,14 +31,15 @@ services:
     build:
       context: ../../
       dockerfile: Dockerfile
-      target: build
-    command: yarn run start:dev
+      target: development
+    command: pnpm run start:dev
     env_file:
       - ../../.env.docker
     ports:
-      - "3001:3001"
+      - '3001:3001'
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     depends_on:
       - redis
       - postgres
