--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "preinstall": "npx only-allow pnpm"
+    "prisma:generate": "pnpm dlx prisma generate"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.470.0",
