ci(): try fix Dockerfile

--- a/deployments/docker-compose/docker-compose.local.yaml
+++ b/deployments/docker-compose/docker-compose.local.yaml
@@ -38,8 +38,8 @@ services:
     ports:
       - '3001:3001'
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - .:/app
+      - /app/node_modules
     depends_on:
       - redis
       - postgres
