--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.470.0",
@@ -41,6 +42,7 @@
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/swagger": "7.1.17",
     "@nestjs/terminus": "^10.2.0",
+    "@nestjs/throttler": "^5.1.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.7.0",
     "@swc/core": "1.3.101",
@@ -82,7 +84,6 @@
     "@nestjs/cli": "10.2.1",
     "@nestjs/schematics": "10.0.3",
     "@nestjs/testing": "10.3.0",
-    "@nestjs/throttler": "^5.1.0",
     "@swc/cli": "0.1.63",
     "@swc/jest": "0.2.29",
     "@types/bcryptjs": "2.4.6",
