feat (#132): add throttler for root module

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ APP_URL='http://localhost:3001'
 FRONTEND_URL='http://localhost:3000'
 ADMIN_FRONTEND_URL='http://localhost:3030'
 
+#== Throttler
+THROTTLER_TTL=1m
+THROTTLER_LIMIT=100
+
 #DATABASE
 DATABASE_URL="postgresql://postgres:postgres@host.docker.internal:5432/webnc"
 DB_HOST=
