--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nestjs-i18n": "^10.4.0",
     "nestjs-pino": "^4.0.0",
     "nestjs-redis": "1.3.3",
+    "nestjs-throttler-storage-redis": "^0.4.1",
     "passport": "0.7.0",
     "passport-facebook": "3.0.0",
     "passport-google-oauth20": "2.0.0",
